--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 html {
-  color-scheme: light dark;
-  font-family: system-ui;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
+	color-scheme: light dark;
+	font-family: system-ui;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100%;
+}
+
+input {
+	font-size: 24px;
+	max-width: 7ch;
 }
